@@ -1,3 +1,7 @@
+December 8, 2009 Wei Mingzhi <weimingzhi@gmail.com>
+
+ * plugins/peopsxgl/gpu.c: Hide the panels in fullscreen mode.
+
 December 4, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
  * plugins/dfinput/analog.c: Allow analog sticks to be mapped to non-axis
